fixing colour contrast on tags

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -248,7 +248,7 @@ html.light .card a {
 }
 
 .tags span {
-    background-color: #D7629C;
+    background-color: #cd3d84;
     color: #FFFFFF;
     border-radius: 0.25rem;
     font-size: .75rem;
